[gd_scene load_steps=4 format=3 uid="uid://46mqr08b7pd5"]

[ext_resource type="Texture2D" uid="uid://ban3j6xblggqs" path="res://images/vendor.png" id="1_f7jmg"]
[ext_resource type="Script" path="res://summon/vendor.gd" id="1_yj3k1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rvo7t"]
size = Vector2(181, 110)

[node name="Vendor" type="Area2D"]
position = Vector2(380, 271)
script = ExtResource("1_yj3k1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, -33)
shape = SubResource("RectangleShape2D_rvo7t")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_f7jmg")

[node name="UI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -100.0
offset_top = -99.0
offset_right = 95.0
offset_bottom = -29.0

[node name="Panel" type="Panel" parent="UI"]
layout_mode = 0
offset_left = -15.0
offset_top = 3.0
offset_right = 204.0
offset_bottom = 57.0

[node name="RichTextLabel" type="RichTextLabel" parent="UI/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = -1.13
anchor_top = -2.022
anchor_right = 1.487
offset_left = 260.47
offset_top = 113.188
offset_right = -102.653
offset_bottom = 72.0
text = "Press space to buy 1 level 
100 Coin"

[node name="Cooldown" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
